--- a/Web Scraping and API/Workbook/Working With API.ipynb
+++ b/Web Scraping and API/Workbook/Working With API.ipynb
@@ -100,17 +100,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9f32de2",
+   "metadata": {},
+   "source": [
+    "## JSON : Preferred data exchange format for APIs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc5248a5",
+   "execution_count": 1,
+   "id": "ad9aa18b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# When 'GET' Request is triggered to APIs, it return a JSON repsonse\n",
+    "# Payload data of post request is also a JSON\n",
+    "# JSON 3 Key concepts :\n",
+    "# 1. Easy to understand to read and write\n",
+    "# 2, Easy for programs to process and generate\n",
+    "# 3. Written in plain text\n",
+    "\n",
+    "# It can be build using Dictionaries and Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "22964ecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To Get the request from URL :\n",
+    "# response = requests.get(base_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bc373a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the request has been approved without any problem :\n",
+    "# repsonse.ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fe9eb0dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check status code \n",
+    "# response.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "30aee79c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for the data body :\n",
+    "# response.text --> return regular string and # response.content --> Returns data in bytes format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4b536d36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converts JSON to a python object :\n",
+    "# response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1286fa78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check dict keys:\n",
+    "# response.json().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9c379804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# It has two main methods:\n",
+    "# .loads(), which creates a Python dictionary from a JSON format string (just as response.json() does)\n",
+    "# .dumps(), which creates a JSON format string out of a Python dictionary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "78c20c8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# .dumps() has options to make the string 'prettier', more readable\n",
+    "# We can choose the number of spaces to be used as indentation\n",
+    "\n",
+    "# json.dumps(response.json(), indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "488a67e9",
+   "metadata": {},
+   "source": [
+    "## Incorporating parameters in the GET request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "03aadbf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Request parameters are added to the URL after a question mark '?'\n",
+    "# Example, we request for the exchange rates of the US Dollar (USD) and Pound Sterling (GBP) only\n",
+    "\n",
+    "#---CODE :\n",
+    "#param_url = base_url + \"?symbols=USD,GBP\"\n",
+    "#param_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8d8de076",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sending a request and saving the response JSON, all at once\n",
+    "\n",
+    "#-- CODE :\n",
+    "#data = requests.get(param_url).json()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad9aa18b",
+   "id": "3fde2810",
    "metadata": {},
    "outputs": [],
    "source": []
