--- a/Projects/Udemy course Projects/Youtube Case Study/Youtube Analysis - Workbook.ipynb
+++ b/Projects/Udemy course Projects/Youtube Case Study/Youtube Analysis - Workbook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ef0f9f26",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "810aeab0",
    "metadata": {},
    "outputs": [
@@ -40,14 +40,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sourav Vishwakarma\\AppData\\Local\\Temp\\ipykernel_7680\\2765530792.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\Sourav Vishwakarma\\AppData\\Local\\Temp\\ipykernel_2604\\2765530792.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  comments = pd.read_csv(r'C:\\Data_Analyst_Learning\\Data-Analyst-Course\\Projects\\Udemy course Projects\\Youtube Case Study\\Youtube_project_Resource\\Youtube_project_shan_singh/UScomments.csv',error_bad_lines= False)\n",
       "b'Skipping line 41589: expected 4 fields, saw 11\\nSkipping line 51628: expected 4 fields, saw 7\\nSkipping line 114465: expected 4 fields, saw 5\\n'\n",
       "b'Skipping line 142496: expected 4 fields, saw 8\\nSkipping line 189732: expected 4 fields, saw 6\\nSkipping line 245218: expected 4 fields, saw 7\\n'\n",
       "b'Skipping line 388430: expected 4 fields, saw 5\\n'\n",
-      "C:\\Users\\Sourav Vishwakarma\\AppData\\Local\\Temp\\ipykernel_7680\\2765530792.py:2: DtypeWarning: Columns (2,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Sourav Vishwakarma\\AppData\\Local\\Temp\\ipykernel_2604\\2765530792.py:2: DtypeWarning: Columns (2,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  comments = pd.read_csv(r'C:\\Data_Analyst_Learning\\Data-Analyst-Course\\Projects\\Udemy course Projects\\Youtube Case Study\\Youtube_project_Resource\\Youtube_project_shan_singh/UScomments.csv',error_bad_lines= False)\n"
      ]
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ec350037",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,8 +943,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3af29408",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting emoji\n",
+      "  Downloading emoji-2.2.0.tar.gz (240 kB)\n",
+      "     ------------------------------------ 240.9/240.9 kB 985.9 kB/s eta 0:00:00\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Building wheels for collected packages: emoji\n",
+      "  Building wheel for emoji (setup.py): started\n",
+      "  Building wheel for emoji (setup.py): finished with status 'done'\n",
+      "  Created wheel for emoji: filename=emoji-2.2.0-py3-none-any.whl size=234912 sha256=d56951ef65b21c84c05d5be53b8648b078b227aefbb68de8f5ff8c3ab610e010\n",
+      "  Stored in directory: c:\\users\\sourav vishwakarma\\appdata\\local\\pip\\cache\\wheels\\9a\\b8\\0f\\f580817231cbf59f6ade9fd132ff60ada1de9f7dc85521f857\n",
+      "Successfully built emoji\n",
+      "Installing collected packages: emoji\n",
+      "Successfully installed emoji-2.2.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -umpy (c:\\anaconda\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\anaconda\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\anaconda\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\anaconda\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\anaconda\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\anaconda\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\anaconda\\lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install emoji"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c7b80f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import emoji"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7146a1d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>comment_text</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>replies</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>Logan Paul it's yo big day ‼️‼️‼️</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>I've been following you from the start of your...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>Say hi to Kong and maverick for me</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>MY FAN . attendance</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>trending 😉</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>#1 on trending AYYEEEEE</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>The end though 😭👍🏻❤️</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>#1 trending!!!!!!!!!</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>Happy one year vlogaversary</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>You and your shit brother may have single hand...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id                                       comment_text likes  \\\n",
+       "0  XpVt6Z1Gjjo                  Logan Paul it's yo big day ‼️‼️‼️     4   \n",
+       "1  XpVt6Z1Gjjo  I've been following you from the start of your...     3   \n",
+       "2  XpVt6Z1Gjjo                 Say hi to Kong and maverick for me     3   \n",
+       "3  XpVt6Z1Gjjo                                MY FAN . attendance     3   \n",
+       "4  XpVt6Z1Gjjo                                         trending 😉     3   \n",
+       "5  XpVt6Z1Gjjo                            #1 on trending AYYEEEEE     3   \n",
+       "6  XpVt6Z1Gjjo                               The end though 😭👍🏻❤️     4   \n",
+       "7  XpVt6Z1Gjjo                               #1 trending!!!!!!!!!     3   \n",
+       "8  XpVt6Z1Gjjo                        Happy one year vlogaversary     3   \n",
+       "9  XpVt6Z1Gjjo  You and your shit brother may have single hand...     0   \n",
+       "\n",
+       "  replies  \n",
+       "0       0  \n",
+       "1       0  \n",
+       "2       0  \n",
+       "3       0  \n",
+       "4       0  \n",
+       "5       0  \n",
+       "6       0  \n",
+       "7       0  \n",
+       "8       0  \n",
+       "9       0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "69acdef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "😀\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\U0001F600')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c758291",
+   "metadata": {},
+   "source": [
+    "Note-->> Every emoji has a Unicode associated with it\n",
+    " '\\U0001F600' is a unicode for 😀\n",
+    "\n",
+    " Unicode-->>The Unicode Standard provides a unique number for every character ,ie \n",
+    "           Unicode is a universal character encoding standard that assigns a code to every character and symbol in every language"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ab62eda0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comment = 'trending 😉'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ada37942",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'trending 😉'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5548d98b",
+   "metadata": {},
+   "source": [
+    "######### NOT WORKING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7297dfc",
+   "metadata": {},
+   "source": [
+    "## Collect Entire data of Youtube "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff4f449",
    "metadata": {},
    "outputs": [],
    "source": []
